--- a/css/style.css
+++ b/css/style.css
@@ -639,6 +639,9 @@ fieldset {
           box-shadow: 0 0 2px 2px #ff6547;
 }
 
+.invalid {
+  box-shadow: 0 0 2px 2px #ff6547;
+}
 
 /* Футер
    ========================================================================== */
